objects/AcctSeed__Bank_Rule_Condition__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Rule__c</fullName>
        <label>Bank Rule</label>
        <referenceTo>AcctSeed__Bank_Rule__c</referenceTo>
        <relationshipLabel>Bank Rule Conditions</relationshipLabel>
        <relationshipName>Bank_Rule_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>AcctSeed__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Detail_Category__c</fullName>
        <label>Detail Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__High_Level_Category__c</fullName>
        <label>High Level Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AcctSeed__Target_Field__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Does_Not_Contain</fullName>
                    <label>Does Not Contain</label>
                </value>
                <value>
                    <fullName>Does_Not_Equal</fullName>
                    <label>Does Not Equal</label>
                </value>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Greater_Than</fullName>
                    <label>Greater Than</label>
                </value>
                <value>
                    <fullName>Is_Blank</fullName>
                    <label>Is Blank</label>
                </value>
                <value>
                    <fullName>Less_Than</fullName>
                    <label>Less Than</label>
                </value>
                <value>
                    <fullName>Starts_With</fullName>
                    <label>Starts With</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Target_Field__c</fullName>
        <label>Target Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AcctSeed__Description__c</fullName>
                    <label>Description</label>
                </value>
                <value>
                    <fullName>AcctSeed__High_Level_Category__c</fullName>
                    <label>High Level Category</label>
                </value>
                <value>
                    <fullName>AcctSeed__Category__c</fullName>
                    <label>Master Category</label>
                </value>
                <value>
                    <fullName>AcctSeed__Detail_Category__c</fullName>
                    <label>Detail Category</label>
                </value>
                <value>
                    <fullName>AcctSeed__Amount__c</fullName>
                    <label>Amount</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bank Rule Condition</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>